--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aleyna & Enes Anı Albümü</title>
+
+    <!-- Alex Brush fontu -->
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
   </head>
   <body style="margin: 0; padding: 0; background-color: #fffafc;">
     <div id="root"></div>
